--- a/app/assets/stylesheets/tasks.css.scss
+++ b/app/assets/stylesheets/tasks.css.scss
@@ -1,13 +1,63 @@
-div.task {
-    position:absolute;
+.col {
+    clear:none;
+    float:left;
 }
 
-table {
-    width:100%;
+.left_col {
+    width:75%;
     height:100%;
+    background-image:url(light_checkered_tiles.png);
+    position:relative;
+    
+    .axis {
+        margin:1% 2.5% 0 5%;
+        height:86%;
+        width:90%;
+        border-left:4px solid #818181;
+        border-bottom:4px solid #818181;
+        
+        div.task {
+            position:absolute;
+            font-weight:bold;
+            padding:10px;
+            border-radius:5px;
+            background-color:#fff;
+            cursor:move;
+            opacity:.9;
+        }
+    }
+    
+    .xaxis, .yaxis {color: #696969}
+    
+    .yaxis {
+        position:absolute;
+        top:50%;
+        -webkit-transform: rotate(270deg);
+        width:5%;
+    }
+    
+    .xaxis {
+        position:relative;
+        display:block;
+        text-align:center;
+        width:100%;
+        top:1%;
+    }
 }
 
-td {
-    border: 1px solid lightgrey;
-    width:50%;
+.right_col {
+    width:25%;
+    height:100%;
+    box-shadow:inset 0px 0px 20px #A1A1A1;
+    background-image:url(diagonal-noise.png);
+    
+    div.task {
+        padding:5px;
+        margin:5px;
+        border-radius:5px;
+        background-color:#818181;
+        color:#fff;
+        font-weight:bold;
+        opacity:.9;
+    }
 }
