re-rendering graph

--- a/app/views/tasks/index.html.haml
+++ b/app/views/tasks/index.html.haml
@@ -1,14 +1,9 @@
 %div.left_col.col
     %div.axis
-        - @tasks.each do |task|
-            %div.task{:id => task.id, :importance => task.importance, :urgency => task.urgency}
-                = task.name
+        =render 'list'
     %h1.yaxis Importance
     %h1.xaxis Urgency
 
+
 %div.right_col.col
-    - @tasks.each do |task|
-        %div.task{:id => task.id, :importance => task.importance, :urgency => task.urgency}
-            %input{:type => :checkbox, :id => task.id}
-            = task.name
-    
+    = render 'task_list'
