--- a/app/views/tasks/list_ordered.html.haml
+++ b/app/views/tasks/list_ordered.html.haml
@@ -1,5 +1,1 @@
-- @tasks.each do |task|
-    %div.task{:id => task.id, :importance => task.importance, :urgency => task.urgency}
-        %input{:type => :checkbox, :id => task.id}
-        = task.name
-    
+= render 'task_list'
