--- a/app/assets/stylesheets/tasks.css.scss
+++ b/app/assets/stylesheets/tasks.css.scss
@@ -50,6 +50,7 @@
     height:100%;
     box-shadow:inset 0px 0px 20px #A1A1A1;
     background-image:url(diagonal-noise.png);
+    overflow-y:scroll;
     
     div.task {
         padding:5px;
@@ -59,5 +60,9 @@
         color:#fff;
         font-weight:bold;
         opacity:.9;
+        
+        input[type=text] {
+            width:98%;
+        }
     }
 }
