--- a/app/views/tasks/_input_and_list.html.haml
+++ b/app/views/tasks/_input_and_list.html.haml
@@ -2,5 +2,5 @@
     %input{:type => :text}
 - @tasks.each do |task|
     %div.task{:id => task.id, :importance => task.importance, :urgency => task.urgency}
-        %input{:type => :checkbox, :id => task.id}
+        %input{:type => :checkbox, :id => task.id, :checked => task.complete}
         = task.name
