--- a/app/views/tasks/_input_and_list.html.haml
+++ b/app/views/tasks/_input_and_list.html.haml
@@ -1,6 +1,3 @@
 %div.task
     %input{:type => :text}
-- @tasks.each do |task|
-    %div.task{:id => task.id, :importance => task.importance, :urgency => task.urgency}
-        %input{:type => :checkbox, :id => task.id, :checked => task.complete}
-        = task.name
+= render 'list'
