--- a/app/assets/stylesheets/tasks.css.scss
+++ b/app/assets/stylesheets/tasks.css.scss
@@ -63,7 +63,7 @@
 }
 
 div.task {
-    padding:1px;
+    padding:1px 9px 1px 1px;
     margin:5px;
     border-radius:5px;
     font-weight:bold;
@@ -71,15 +71,27 @@ div.task {
     border:1px solid lightgrey;
 
     input[type=text] {
-        width:98%;
+        width:95%;
+        border: 0px solid grey;
+        border-radius: 2px;
+        margin:2%;
+        padding:1%;
     }
     
     span.remove {
-        padding:2px 5px;
+        margin: -2px 0px 0;
+        padding:0px 2px 0px;
         font-size:.8em;
+        float:right;
         
-        border-radius:4px;
-        border:1px solid grey;
+        position:relative;
+        right:-10px;
+        
+/*        border-radius: 0 4px 0 0;*/
+        border-radius: 0 4px 0 4px;
+        border:1px solid lightgrey;
+        border-left:none;
+        border-bottom:none;
         cursor:pointer;
         background-color:#aaa;
     }
