beta complete it seems

--- a/app/views/tasks/index.html.haml
+++ b/app/views/tasks/index.html.haml
@@ -4,6 +4,7 @@
     %h1.yaxis Importance
     %h1.xaxis Urgency
 
+    = link_to "Sign out", "/signout"
 
 %div.right_col.col
     = render 'input_and_list'
