--- a/app/assets/stylesheets/tasks.css.scss
+++ b/app/assets/stylesheets/tasks.css.scss
@@ -15,6 +15,7 @@
         width:90%;
         border-left:4px solid #818181;
         border-bottom:4px solid #818181;
+        padding:0 0 4px;
         
         div.task {
             position:absolute;
@@ -43,12 +44,17 @@
         width:100%;
         top:1%;
     }
+    
+    a {
+        display:block;
+        margin:1.75em 3.6em;
+    }
 }
 
 .right_col {
     width:25%;
     height:100%;
-    box-shadow:inset 0px 0px 20px #A1A1A1;
+    box-shadow:inset 2px 2px 10px #888;
     background-image:url(diagonal-noise.png);
     overflow-y:scroll;
     
@@ -63,6 +69,7 @@
 }
 
 div.task {
+    box-shadow:1px 2px 4px #888;
     padding:1px 9px 1px 1px;
     margin:5px;
     border-radius:5px;
@@ -75,7 +82,7 @@ div.task {
 /*        border: 1px solid grey;*/
         border-radius: 4px;
         margin:2%;
-        padding:4px;
+        padding:3.5px;
     }
     
     span.remove {
